Multi-Jumps are not active.
Still a slight bug to work out with the rendering of allowed moveTo locations graphics. AI methods in place, need to create an AI Player placeholder to avoid invalid townid calls.
